--- a/src/index.html
+++ b/src/index.html
@@ -1,13 +1,62 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="utf-8">
-  <title>CorporateWebsitePwa</title>
-  <base href="/">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
-</head>
-<body>
-  <app-root></app-root>
-</body>
+  <head>
+    <meta charset="utf-8" />
+    <title>CorporateWebsitePwa</title>
+    <base href="/" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link
+      rel="shortcut icon"
+      href="./assets/img/favicon.png"
+      type="image/x-icon"
+    />
+
+    <link rel="stylesheet" href="./assets/css/normalize.css" />
+    <link rel="stylesheet" href="./assets/css/styles.css" />
+    <link rel="stylesheet" href="./assets/css/whats.css" />
+    <link rel="stylesheet" href="./assets/css/whats2.css" />
+    <link
+      rel="stylesheet"
+      href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css"
+    />
+    <link
+      href="https://fonts.googleapis.com/icon?family=Material+Icons"
+      rel="stylesheet"
+    />
+
+    <meta name="theme-color" content="#2091f9" />
+
+    <meta name="title" content="Aprende CSS desde cero" />
+    <meta
+      name="description"
+      content="Hola, soy una descripción que verás cuando busques algo de mi temática en Google."
+    />
+
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://BenjaminCondori.github.io" />
+    <meta property="og:title" content="Aprende CSS desde cero" />
+    <meta
+      property="og:description"
+      content="Hola, soy una descripción que verás cuando busques algo de mi temática en Google."
+    />
+    <meta
+      property="og:image"
+      content="https://BenjaminCondori.github.io/img/css.jpg"
+    />
+
+    <meta property="twitter:card" content="summary_large_image" />
+    <meta property="twitter:url" content="https://aprendecss.com/" />
+    <meta property="twitter:title" content="Aprende CSS desde cero" />
+    <meta
+      property="twitter:description"
+      content="Hola, soy una descripción que verás cuando busques algo de mi temática en Google."
+    />
+    <meta
+      property="twitter:image"
+      content="https://BenjaminCondori.github.io/img/css.jpg"
+    />
+  </head>
+  <body>
+    <app-root></app-root>
+  </body>
 </html>
