--- a/src/index.html
+++ b/src/index.html
@@ -58,5 +58,17 @@
   </head>
   <body>
     <app-root></app-root>
+
+    <div class="content-chatbot">
+      <df-messenger
+        intent="WELCOME"
+        chat-title="Chat Bot"
+        agent-id="5b384a2d-b649-4515-88a0-f03f918c6196"
+        language-code="es"
+        chat-icon="./assets/img/chatbot-icon.png"
+      ></df-messenger>
+    </div>
+    
+    <script src="https://www.gstatic.com/dialogflow-console/fast/messenger/bootstrap.js?v=1"></script>
   </body>
 </html>
