modificar datos de la empresa

--- a/src/index.html
+++ b/src/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8"/>
-    <title>CorporateWebsitePwa</title>
+    <title>DevXperts - Website</title>
     <base href="/"/>
     <meta name="viewport" content="width=device-width, initial-scale=1"/>
     <link rel="shortcut icon" href="./assets/img/favicon.png" type="image/x-icon"/>
@@ -14,7 +14,7 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css"/>
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet"/>
 
-    <meta name="theme-color" content="#2091f9"/>
+    <meta name="theme-color" content="#001A49"/>
 
     <meta name="title" content="Aprende CSS desde cero"/>
     <meta name="description" content="Hola, soy una descripción que verás cuando busques algo de mi temática en Google."/>
@@ -31,7 +31,6 @@
     <meta property="twitter:description" content="Hola, soy una descripción que verás cuando busques algo de mi temática en Google."/>
     <meta property="twitter:image" content="https://BenjaminCondori.github.io/img/css.jpg"/>
     <link rel="manifest" href="manifest.webmanifest">
-  <!-- <meta name="theme-color" content="#1976d2"> -->
 </head>
   <body>
     <app-root></app-root>
