--- a/src/index.html
+++ b/src/index.html
@@ -14,7 +14,7 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css"/>
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet"/>
 
-    <meta name="theme-color" content="#001A49"/>
+    <meta name="theme-color" content="#1d293f"/>
 
     <meta name="title" content="Aprende CSS desde cero"/>
     <meta name="description" content="Hola, soy una descripción que verás cuando busques algo de mi temática en Google."/>
