modificar datos de la empresa

--- a/src/index.html
+++ b/src/index.html
@@ -16,20 +16,26 @@
 
     <meta name="theme-color" content="#1d293f"/>
 
-    <meta name="title" content="Aprende CSS desde cero"/>
-    <meta name="description" content="Hola, soy una descripción que verás cuando busques algo de mi temática en Google."/>
+    <meta name="title" content="DevXperts - Soluciones Tecnológicas Innovadoras" />
+    <meta name="description" content="En DevXperts transformamos tus ideas en realidades digitales. Ofrecemos desarrollo Full Stack, inteligencia artificial y soporte técnico de primer nivel." />
+    <meta name="keywords" content="desarrollo web, inteligencia artificial, soluciones tecnológicas, diseño web, soporte técnico, desarrollo Full Stack" />
+    <meta name="author" content="DevXperts" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://dev-xperts.onrender.com/" />
+    <meta property="og:title" content="DevXperts - Soluciones Tecnológicas Innovadoras" />
+    <meta property="og:description" content="Transformamos tus ideas en realidades digitales. Especialistas en desarrollo Full Stack, inteligencia artificial y soporte técnico." />
+    <meta property="og:image" content="https://dev-xperts.onrender.com/assets/img/desarrollo-web3.png" />
 
-    <meta property="og:type" content="website"/>
-    <meta property="og:url" content="https://BenjaminCondori.github.io"/>
-    <meta property="og:title" content="Aprende CSS desde cero"/>
-    <meta property="og:description" content="Hola, soy una descripción que verás cuando busques algo de mi temática en Google."/>
-    <meta property="og:image" content="https://BenjaminCondori.github.io/img/css.jpg"/>
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image" />
+    <meta property="twitter:url" content="https://dev-xperts.onrender.com" />
+    <meta property="twitter:title" content="DevXperts - Soluciones Tecnológicas Innovadoras" />
+    <meta property="twitter:description" content="Descubre soluciones personalizadas para tu negocio con desarrollo web, IA y soporte técnico de excelencia." />
+    <meta property="twitter:image" content="https://dev-xperts.onrender.com/assets/img/desarrollo-web3.png" />
 
-    <meta property="twitter:card" content="summary_large_image"/>
-    <meta property="twitter:url" content="https://aprendecss.com/"/>
-    <meta property="twitter:title" content="Aprende CSS desde cero"/>
-    <meta property="twitter:description" content="Hola, soy una descripción que verás cuando busques algo de mi temática en Google."/>
-    <meta property="twitter:image" content="https://BenjaminCondori.github.io/img/css.jpg"/>
     <link rel="manifest" href="manifest.webmanifest">
 </head>
   <body>
